--- a/style.css
+++ b/style.css
@@ -42,72 +42,101 @@ header .logo i {
 header .icons .fa-search {
     padding-right: var(--padding);
 }
-video {
+.player {
+    position: sticky;
+    top:0;
+    text-align: center;
+    background-color: var(--black-color);
+}
+.player video {
     width: 100%;
     height: 100%;
     max-width: 1000px;
 }
+.info {
+    padding: var(--padding);
+}
 li {
     list-style: none;
 }
-ul {
-    margin: 0;
-    padding: 0;
-}
-.hashtag {
+.info .title2 .hashtag {
     display: flex;
-    color: blue;
+    font-size: var(--font-small);
+    color: var(--blue-color);
 }
-.hashtag li {
-    padding-right: 8px;
+.info .title2 .hashtag li {
+    margin-right: var(--padding);
 }
-.titleandbutton {
+.info .title2 .titleandbutton {
     display: flex;
     justify-content: space-between;
 }
-button {
+button, button:focus {
     border: none;
-    height: 100%;
+    cursor: pointer;
+    outline: none;
     background-color: white;
 }
-.title3 {
-    font-size: 17px;
+.info .title2 .titleandbutton .title3 {
+    font-size: var(--font-medium);
 }
-.view {
-    font-size: 11px;
-    color: gray;
+.info .title2 .titleandbutton .moreBtn {
+    height: 100%;
 }
+.info .view {
+    font-size: var(--font-small);
+    color: var(--gray-dark-color);
+}
+
 .mark {
     display: flex;
     justify-content: space-around;
+    margin: var(--padding) 0;
 }
-.mark li {
+.mark button {
     display: flex;
     flex-direction: column;
-    padding : 14px;
-    margin-bottom: 4px;
+    font-size: var(--font-small);
+    color: var(--gray-dark-color);
+}
+.mark button i {
+    margin: 0 auto;
+    margin-bottom: calc(var(--padding) / 2);
+    font-size: 16px;
 }
 .mark .fa-thumbs-up {
-    color: blue;
+    color: var(--blue-color);
 }
 .channel {
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid var(--gray-light-color);
+    border-bottom: 1px solid var(--gray-light-color);
 }
-.channel .info {
+.channel .metadata {
+    display: flex;
+    align-items: center;
+}
+.channel .metadata img {
+    height: var(--avatar-size);
+    width: var(--avatar-size);
+    border-radius: 50%;
+}
+.channel .metadata .info {
     display: flex;
     flex-direction: column;
 }
-.channel .info .name {
-    font-size: 18px;
+.channel .metadata .info .name {
+    font-size: var(--font-medium);
 }
-.channel .info .subscriber {
-    font-size: 12px;
-    color: gray;
+.channel .metadata .info .subscribers {
+    font-size: var(--font-small);
+    color: var(--gray-dark-color);
 }
-.channel img {
-    width: 36px;
-    height: 36px;
+.channel .subscribe {
+    text-transform: uppercase;
+    color: var(--red-color);
+    font-size: var(--font-medium);
 }
 .title4 {
     padding: 8px 14px;
