--- a/style.css
+++ b/style.css
@@ -178,3 +178,13 @@ button, button:focus {
     font-size: var(--font-micro);
     color: var(--gray-dark-color);
 }
+.infoandupnext {
+    display: flex;
+    flex-direction: column;
+} 
+@media screen and (min-width:760px) {
+    .infoandupnext {
+        flex-direction: row;
+        margin: var(--padding) 0;
+    }
+}
